force-app/main/default/objects/Bank_Account__c/Bank_Account__c.object-meta.xml
<CustomObject>
    <description>Holds bank accounts</description>
    <label>Bankrekening</label>
    <nameField>
        <displayFormat>BA-{000000000}</displayFormat>
        <label>Bank Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bankrekeningen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>