force-app/main/default/objects/Bank_Account__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this bank account active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>