force-app/main/default/objects/Bank_Account__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default bank account for this account</description>
    <inlineHelpText>Default bank account for this account</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>