force-app/main/default/objects/Bank_Account__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date the bank account is valid from</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>