force-app/main/default/objects/Bank_Account__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>The end date of this bank account&#39;s validity</description>
    <inlineHelpText>The end date of this bank account&#39;s validity</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>