force-app/main/default/objects/Bank_Account__c/validationRules/Valid_IBAN_NL.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_IBAN_NL</fullName>
    <active>false</active>
    <description>To validate if the NL IBAN is correct.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Account__r.BillingCountryCode, &quot;NL&quot;), 
    LEN(IBAN__c) &lt;&gt; 18)</errorConditionFormula>
    <errorDisplayField>IBAN__c</errorDisplayField>
    <errorMessage>Check if the IBAN is valid.</errorMessage>
</ValidationRule>