force-app/main/default/objects/Bank_Account__c/listViews/All_Bank_Account.listView-meta.xml
<ListView>
    <fullName>All_Bank_Account</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>IBAN__c</columns>
    <columns>Default__c</columns>
    <columns>Active__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Bank Account</label>
</ListView>